objects/Student_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>(TODAY()  -  D_O_B__c ) / 365.2425</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Status__c</fullName>
        <label>Fee Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not paid</fullName>
                </value>
                <value>
                    <fullName>Half paid</fullName>
                </value>
                <value>
                    <fullName>Full  paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c + &apos; &apos; + Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>First_name_not_equal_to_last_name</fullName>
        <active>false</active>
        <errorConditionFormula>First_Name__c  =  Last_Name__c</errorConditionFormula>
        <errorMessage>First name not equal to last name</errorMessage>
    </validationRules>
</CustomObject>